--- a/example-4/package.json
+++ b/example-4/package.json
@@ -5,7 +5,8 @@
     "test": "playwright test --reporter=list  --workers 1"
   },
   "devDependencies": {
-    "@playwright/test": "^1.37.1",
+    "@playwright/test": "^1.58.2",
+    "@types/node": "^25.2.2",
     "axios": "^1.3.1",
     "mongodb": "^6.0.0"
   }
