--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,7 +19,7 @@ jobs:
         node-version: lts/*
 
     - name: Install dependencies
-      run: npm ci
+      run: npm install
       working-directory: chapter-9/example-4
 
     - name: Install Playwright Browsers
