--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -12,27 +12,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - uses: actions/setup-node@v4
-      with:
-        node-version: lts/*
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
 
-    - name: Install dependencies
-      run: npm install
-      working-directory: chapter-9/example-4
+      - name: Install dependencies
+        run: npm install
+        working-directory: example-4
 
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
-      working-directory: chapter-9/example-4
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+        working-directory: example-4
 
-    - name: Run Playwright tests
-      run: npx playwright test
-      working-directory: chapter-9/example-4
+      - name: Run Playwright tests
+        run: npx playwright test
+        working-directory: example-4
 
-    - uses: actions/upload-artifact@v4
-      if: ${{ !cancelled() }}
-      with:
-        name: playwright-report
-        path: chapter-9/example-4/playwright-report/
-        retention-days: 30
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: example-4/playwright-report/
+          retention-days: 30
