--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,25 +18,22 @@ jobs:
         with:
           node-version: lts/*
 
+      - name: Install Docker Compose
+        run: | 
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
+
       - name: Install dependencies
-        run: |
-          cd example-4
-          npm ci
+        working-directory: example-4
+        run: npm ci
 
       - name: Install Playwright Browsers
-        run: |
-          cd example-4
-          npx playwright install --with-deps
-
-      - name: Start backend
-        run: |
-          cd example-4
-          docker-compose up -d
+        working-directory: example-4
+        run: npx playwright install --with-deps
 
       - name: Run Playwright tests
-        run: |
-          cd example-4
-          npm test
+        working-directory: example-4
+        run: npm test
 
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
